replace some models, usiing gemma and also some architectural changes